# 2021_ds_economics

./: .gitignore  README.md  pyproject.toml  sample.ipynb
02_20210916/: Empirical Analysis for Economics #2.ipynb  Pythonで手堅くプログラミングの基礎.ipynb
03_20210920/: hara_2021_chapter_02.ipynb  計量経済学_回帰分析.ipynb  計量経済学_重回帰分析.ipynb  軽量経済学_統計的な処理の基礎.ipynb
04_20210923/: .gitignore  Twitter のデータを取得する_fords2020.ipynb  rakuten_api.ipynb  食べログ.ipynb
05_20210927/: 一橋経済の修論リストをスクレイピングする.ipynb
