[tool.poetry]
name = "2021_ds_economics"
version = "0.1.0"
description = "経済学のための実践データ分析2021 の履修レポジトリ"
authors = ["Yuichiro Smith <contact@yu-smith.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.3"
jupyterlab = "^3.1.11"

[tool.poetry.dev-dependencies]
poetry = "^1.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
