[tool.poetry]
name = "2021_ds_economics"
version = "0.1.0"
description = "経済学のための実践データ分析2021 の履修レポジトリ"
authors = ["Yuichiro Smith <contact@yu-smith.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21.2"
pandas = "^1.3.3"
jupyterlab = "^3.1.11"
wheel = "^0.37.0"
scipy = "^1.7.1"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
statsmodels = "^0.12.2"
beautifulsoup4 = "^4.10.0"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
poetry = "^1.1.8"
packaging = "^20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
